src/test/deca/context/valid/oracle/rvalue.deca
{
    int a = 1;
    float b = a;
    float c = 1;
    float d = a;
}