src/test/deca/context/invalid/oracle/use_var_not_decl_with_instanceof.deca
{
    bool x;
    x = y instanceof int;
}